@@ -1,3 +1,11 @@
+2019-06-04  Yusuke Suzuki  <ysuzuki@apple.com>
+
+        Unreviewed, update exception scope for putByIndexBeyondVectorLength
+        https://bugs.webkit.org/show_bug.cgi?id=198477
+
+        * runtime/JSObject.cpp:
+        (JSC::JSObject::putByIndexBeyondVectorLength):
+
 2019-06-03  Yusuke Suzuki  <ysuzuki@apple.com>
 
         [JSC] JSObject::attemptToInterceptPutByIndexOnHole should use getPrototype instead of getPrototypeDirect
